[gd_scene load_steps=10 format=2]

[ext_resource path="res://Gui/eurofurence/eurof35.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Gui/BaseButton.gd" type="Script" id=2]
[ext_resource path="res://SFX/AudioStreamPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/Coin.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=5]
size = 32
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
extra_spacing_space = -2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.270588, 0.431373, 0.537255, 1 )
skew = Vector2( 0.2, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.984314, 0.858824, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 13
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0509804, 0.517647, 0.827451, 1 )
skew = Vector2( 0.2, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0.984314, 0.858824, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 13
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 0.984314, 0.858824, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0.180392, 0.160784, 0.305882, 1 )
Button/colors/font_color_hover = Color( 0.180392, 0.160784, 0.305882, 1 )
Button/colors/font_color_pressed = Color( 1, 0.984314, 0.858824, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 5 )
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 7 )

[node name="Button" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = SubResource( 4 )
text = "Hi"
expand_icon = true
script = ExtResource( 2 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 5 )
normal_range = 1.3

[node name="AudioStreamPlayer2" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.78
normal_range = 1.78

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
